2005-06-11  Andreas Schwab  <schwab@suse.de>

	* bindings.el: Add binding of `ESC functionkey' for every
	`M-functionkey'.
	* hexl.el (hexl-mode-map): Likewise.

2005-06-10  Michael Hotchin  <michael@hotchin.net>  (tiny change)

	* progmodes/compile.el (compilation-error-regexp-alist-alist)
	[msft]: update regexp for newer msft compilers.

2005-06-10  Mark A. Hershberger  <mah@everybody.org>

	* xml.el (start-chars, xml-parse-dtd): Add the ability to skip
	ATTLIST portions of included DTDs.
	(xml-parse-dtd): Eliminate use of inefficient match-data.

2005-06-10  Miles Bader  <miles@gnu.org>

	* play/mpuz.el (mpuz-unsolved, mpuz-solved, mpuz-trivial)
	(mpuz-text): Remove "-face" suffix from face names.
	(mpuz-unsolved-face, mpuz-solved-face, mpuz-trivial-face)
	(mpuz-text-face): New backward-compatibility aliases for renamed faces.
	(mpuz-create-buffer, mpuz-paint-digit): Use renamed mpuz faces.

	* play/gomoku.el (gomoku-O, gomoku-X):
	Remove "-face" suffix from face names.
	(gomoku-font-lock-O-face, gomoku-font-lock-X-face):
	New backward-compatibility aliases for renamed faces.
	(gomoku-font-lock-keywords): Use renamed gomoku faces.

2005-06-10  Juanma Barranquero  <lekktu@gmail.com>

	* thumbs.el: Fixes for changes of 2005-06-09.
	(thumbs-thumbsdir): Force `thumbs-thumbsdir' to be interpretable
	as a directory.
	(thumbs-thumbname): Remove directory separator from format string;
	`thumbs-thumbsdir' now returns a valid directory name.
	(thumbs-temp-dir): New defsubst.
	(thumbs-temp-file, thumbs-resize-image, thumbs-modify-image):
	Use it.

	* cus-edit.el (minibuffer):
	* files.el (make-backup-file-name-function):
	* filesets.el (filesets-external-viewers):
	* hilit-chg.el (highlight-changes-colours)
	(highlight-changes-face-list, highlight-changes-rotate-faces):
	* ielm.el (ielm-dynamic-return, inferior-emacs-lisp-mode):
	* kmacro.el (kmacro-call-macro):
	* log-edit.el (log-edit-changelog-full-paragraphs):
	* mouse.el (mouse-1-click-follows-link):